fixed spacing issue

--- a/src/views/Main.css
+++ b/src/views/Main.css
@@ -4,7 +4,6 @@
     justify-content: center;
     margin: 50px;
     font-weight: bold;
-    height: 100vh;
 }
 
 .select {
